improv: buff host mimic and labyrinth eye (#218)